--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -13,5 +13,5 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:9011/.wel
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9011
 
 # FusionAuth client
-io.github.evaggelos99.ems.user.service.fusionauth.api-key=4fTGL1ShFrzZen_r3x5zS_mSWHG7yScOLlidrEapk_UgMZTOvBC6K2vk
+io.github.evaggelos99.ems.user.service.fusionauth.api-key=
 io.github.evaggelos99.ems.user.service.fusionauth.application-name=event-management-system
