--- a/event-stream-simulator/src/main/resources/application.properties
+++ b/event-stream-simulator/src/main/resources/application.properties
@@ -22,5 +22,5 @@ io.github.evaggelos99.ems.event.simulator.grantType=password
 io.github.evaggelos99.ems.event.simulator.username=superduper
 io.github.evaggelos99.ems.event.simulator.password=superduper
 io.github.evaggelos99.ems.event.simulator.clientId=99c404e4-2877-4296-9c85-a89191d19e21
-io.github.evaggelos99.ems.event.simulator.clientSecret=7t2hPRCnEIBeuOnpzmKIv6qIPr5nybdKKB8YL9gsTts
+io.github.evaggelos99.ems.event.simulator.clientSecret=
 io.github.evaggelos99.ems.event.simulator.fusionAuthClient=http://localhost:9011
