technical/add-event-streaming-simulator - refactor DB triggers into normalized tables - refactor REST API for adding specific objects - add logback - add banners for swag

--- a/attendee-service/src/main/resources/properties/queries.properties
+++ b/attendee-service/src/main/resources/properties/queries.properties
@@ -1,8 +1,23 @@
 # Properties file to store the queries for CRUD operation in the DB
 # You could also change the queries to this: DELETE FROM ems_attendee.attendees WHERE id = :id -> and you would call .bind("id", uuid))
 # ems_attendee.attendees
-org.com.ems.queries.attendee.save = INSERT INTO ems_attendee.attendees (id, created_at, last_updated, first_name, last_name, ticket_ids) values($1,$2,$3,$4,$5,$6)
-org.com.ems.queries.attendee.edit = UPDATE ems_attendee.attendees SET id = $1, last_updated = $2, first_name = $3, last_name = $4, ticket_ids = $5 WHERE id = $6
-org.com.ems.queries.attendee.get-all = SELECT * FROM ems_attendee.attendees
-org.com.ems.queries.attendee.get-id = SELECT * FROM ems_attendee.attendees WHERE id = $1
-org.com.ems.queries.attendee.delete-id = DELETE FROM ems_attendee.attendees WHERE id = $1
+org.com.ems.queries.attendee.save=INSERT INTO ems_attendee.attendees (id, created_at, last_updated, first_name, last_name) values($1,$2,$3,$4,$5);
+org.com.ems.queries.attendee.edit=UPDATE ems_attendee.attendees SET last_updated = $1, first_name = $2, last_name = $3 WHERE id = $4;
+org.com.ems.queries.attendee.get-all=SELECT \
+    a.*, \
+    (SELECT ARRAY_AGG(tm.ticket_id) FROM ems_attendee.ticket_mapping tm WHERE tm.attendee_id = a.id) AS ticket_ids \
+    FROM ems_attendee.attendees a;
+org.com.ems.queries.attendee.get-id=SELECT \
+    a.*, \
+    (SELECT ARRAY_AGG(tm.ticket_id) FROM ems_attendee.ticket_mapping tm WHERE tm.attendee_id = a.id) AS ticket_ids \
+    FROM ems_attendee.attendees a \
+    WHERE id= $1;
+org.com.ems.queries.attendee.delete-id=DELETE FROM ems_attendee.attendees WHERE id = $1;
+org.com.ems.queries.attendee.save-ticket-mappings=INSERT INTO ems_attendee.ticket_mapping (attendee_id, ticket_id) values ($1,$2);
+org.com.ems.queries.attendee.delete-ticket-mappings=DELETE FROM ems_attendee.ticket_mapping where attendee_id = $1;
+org.com.ems.queries.attendee.delete-ticket-singular-mapping=DELETE FROM ems_attendee.ticket_mapping where attendee_id = $1 AND ticket_id=$2;
+org.com.ems.queries.attendee.get-tickets=SELECT t.* \
+  FROM ems_attendee.ticket_mapping tm \
+  JOIN ems_ticket.tickets t ON tm.ticket_id = t.id \
+  WHERE tm.attendee_id = $1;
+
