--- a/attendee-service/src/test/resources/application.properties
+++ b/attendee-service/src/test/resources/application.properties
@@ -1,5 +1,6 @@
 spring.main.allow-bean-definition-overriding=true
 io.github.evaggelos99.ems.event.topic.add-attendee=ems.event.add-attendee
+io.github.evaggelos99.ems.event.topic.remove-attendee=ems.event.remove-attendee
 spring.kafka.producer.retries=1
 io.github.evaggelos99.ems.attendee.ticket-service-url=localhost:28080
 spring.main.web-application-type=reactive
