--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     container_name: db
     hostname: db
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: pass
+      POSTGRES_USER: event-management-system-user
+      POSTGRES_PASSWORD: event-management-system-user
       POSTGRES_DB: event-management-system
     ports:
       - "5433:5432"
@@ -31,7 +31,7 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       KAFKA_LOG_DIRS: '/tmp/kraft-combined-logs'
-      KAFKA_CREATE_TOPICS: "ems.event.add-attendee:1:1,"
+      KAFKA_CREATE_TOPICS: "ems.event.add-attendee:1:1,ems.event.remove-attendee:1:1,"
     ports:
       - "9092:9092"
     networks:
@@ -109,11 +109,12 @@ services:
     image: 'evaggelosg99/attendee-service:latest'
     environment:
       org.com.ems.db.port: 5432
-      org.com.ems.db.host: db
+      io.github.evaggelos99.ems.attendee-service.db.host: db
       server.port: 8080
       io.github.evaggelos99.ems.attendee.ticket-service-url: "http://ticket-service:8080/ticket"
       spring.kafka.producer.bootstrap-servers: broker:9092
       io.github.evaggelos99.ems.event.topic.add-attendee: ems.event.add-attendee
+      io.github.evaggelos99.ems.event.topic.remove-attendee: ems.event.remove-attendee
       spring.kafka.producer.retries: 3
       spring.security.oauth2.resourceserver.jwt.jwk-set-uri: ${JWK_SET_URI}
       spring.security.oauth2.resourceserver.jwt.issuer-uri: ${JWT_ISSUER_URI}
@@ -133,11 +134,12 @@ services:
     environment:
       logging.level.io.github.evaggelos99.ems.event.service.transport.kafka: TRACE
       org.com.ems.db.port: 5432
-      org.com.ems.db.host: db
+      io.github.evaggelos99.ems.event-service.db.host: db
       server.port: 8080
       spring.kafka.producer.bootstrap-servers: broker:9092
       spring.kafka.consumer.bootstrap-servers: broker:9092
       io.github.evaggelos99.ems.event.topic.add-attendee: ems.event.add-attendee
+      io.github.evaggelos99.ems.event.topic.remove-attendee: ems.event.remove-attendee
       spring.kafka.producer.retries: 3
       spring.security.oauth2.resourceserver.jwt.jwk-set-uri: ${JWK_SET_URI}
       spring.security.oauth2.resourceserver.jwt.issuer-uri: ${JWT_ISSUER_URI}
@@ -156,7 +158,7 @@ services:
     image: 'evaggelosg99/organizer-service:latest'
     environment:
       org.com.ems.db.port: 5432
-      org.com.ems.db.host: db
+      io.github.evaggelos99.ems.organizer-service.db.host: db
       server.port: 8080
       spring.security.oauth2.resourceserver.jwt.jwk-set-uri: ${JWK_SET_URI}
       spring.security.oauth2.resourceserver.jwt.issuer-uri: ${JWT_ISSUER_URI}
@@ -175,7 +177,7 @@ services:
     image: 'evaggelosg99/ticket-service:latest'
     environment:
       org.com.ems.db.port: 5432
-      org.com.ems.db.host: db
+      io.github.evaggelos99.ems.ticket-service.db.host: db
       server.port: 8080
       spring.security.oauth2.resourceserver.jwt.jwk-set-uri: ${JWK_SET_URI}
       spring.security.oauth2.resourceserver.jwt.issuer-uri: ${JWT_ISSUER_URI}
@@ -194,7 +196,7 @@ services:
     image: 'evaggelosg99/sponsor-service:latest'
     environment:
       org.com.ems.db.port: 5432
-      org.com.ems.db.host: db
+      io.github.evaggelos99.ems.sponsor-service.db.host: db
       server.port: 8080
       spring.security.oauth2.resourceserver.jwt.jwk-set-uri: ${JWK_SET_URI}
       spring.security.oauth2.resourceserver.jwt.issuer-uri: ${JWT_ISSUER_URI}
@@ -213,7 +215,7 @@ services:
     image: 'evaggelosg99/user-service:latest'
     environment:
       org.com.ems.db.port: 5432
-      org.com.ems.db.host: db
+      io.github.evaggelos99.ems.user-service.db.host: db
       server.port: 8080
       spring.security.oauth2.resourceserver.jwt.jwk-set-uri: ${JWK_SET_URI}
       spring.security.oauth2.resourceserver.jwt.issuer-uri: ${JWT_ISSUER_URI}
@@ -233,8 +235,8 @@ services:
     environment:
       org.com.ems.db.port: 5432
       org.com.ems.db.host: db
-      org.com.ems.db.user: user
-      org.com.ems.db.password: pass
+      org.com.ems.db.user: event-management-system-user
+      org.com.ems.db.password: event-management-system-user
       org.com.ems.db.database: event-management-system
     depends_on:
       - db
@@ -253,6 +255,11 @@ services:
       io.github.evaggelos99.ems.event.simulator.event-service-url: "http://event-service:8080/event"
       io.github.evaggelos99.ems.event.simulator.enabled: true
       io.github.evaggelos99.ems.event.simulator.fusionAuthClient: ${JWT_ISSUER_URI}
+      io.github.evaggelos99.ems.event.simulator.clientSecret: ${JWT_SECRET}
+      io.github.evaggelos99.ems.event.simulator.username: superduper
+      io.github.evaggelos99.ems.event.simulator.password: superduper
+      io.github.evaggelos99.ems.event.simulator.clientId: 99c404e4-2877-4296-9c85-a89191d19e21
+
     depends_on:
       - broker
       - fusionauth
