--- a/event-service/src/main/resources/properties/queries.properties
+++ b/event-service/src/main/resources/properties/queries.properties
@@ -1,12 +1,34 @@
 # Properties file to store the queries for CRUD operation in the DB
 # You could also change the queries to this: DELETE FROM ems_attendee.attendees WHERE id = :id -> and you would call .bind("id", uuid))
 # ems_event.events
-org.com.ems.queries.event.save=INSERT INTO ems_event.events (id, created_at, last_updated, name, place, event_type, attendee_ids, organizer_id, limit_of_people, sponsors_ids, start_time, duration, streamable) values($1,$2,$3,$4,$5,$6,$7,$8,$9,$10,$11,$12,$13)
-org.com.ems.queries.event.edit=UPDATE ems_event.events SET id = $1, last_updated = $2, name = $3, place = $4, event_type = $5, attendee_ids = $6, organizer_id = $7, limit_of_people = $8, sponsors_ids = $9, start_time = $10, duration = $11, streamable = $12 WHERE id = $13
-org.com.ems.queries.event.get-all=SELECT * FROM ems_event.events
-org.com.ems.queries.event.get-id=SELECT * FROM ems_event.events WHERE id = $1
+org.com.ems.queries.event.save=INSERT INTO ems_event.events (id, created_at, last_updated, name, place, event_type, organizer_id, limit_of_people, start_time, duration, streamable) values($1,$2,$3,$4,$5,$6,$7,$8,$9,$10,$11)
+org.com.ems.queries.event.edit=UPDATE ems_event.events SET last_updated = $1, name = $2, place = $3, event_type = $4, organizer_id = $5, limit_of_people = $6, start_time = $7, duration = $8, streamable = $9 WHERE id = $10
+org.com.ems.queries.event.get-all=SELECT \
+    e.*, \
+    (SELECT ARRAY_AGG(am.attendee_id) FROM ems_event.attendee_mapping am WHERE am.event_id = e.id) AS attendee_ids, \
+    (SELECT ARRAY_AGG(sm.sponsor_id) FROM ems_event.sponsor_mapping sm WHERE sm.event_id = e.id) AS sponsor_ids \
+    FROM ems_event.events e;
+org.com.ems.queries.event.get-id=SELECT \
+    e.*, \
+    (SELECT ARRAY_AGG(am.attendee_id) FROM ems_event.attendee_mapping am WHERE am.event_id = e.id) AS attendee_ids, \
+    (SELECT ARRAY_AGG(sm.sponsor_id) FROM ems_event.sponsor_mapping sm WHERE sm.event_id = e.id) AS sponsor_ids \
+    FROM ems_event.events e WHERE e.id = $1;
 org.com.ems.queries.event.delete-id=DELETE FROM ems_event.events WHERE id = $1
-
+# ems_event.attendee_mapping & ems_event.sponsor_mapping
+org.com.ems.queries.event.save-attendee-mapping=INSERT INTO ems_event.attendee_mapping (event_id, attendee_id) values ($1,$2)
+org.com.ems.queries.event.delete-attendee-mapping=DELETE FROM ems_event.attendee_mapping where event_id = $1
+org.com.ems.queries.event.delete-attendee-singular-mapping=DELETE FROM ems_event.attendee_mapping where event_id = $1 AND attendee_id = $2
+org.com.ems.queries.event.save-sponsor-mapping=INSERT INTO ems_event.sponsor_mapping (event_id, sponsor_id) values ($1,$2)
+org.com.ems.queries.event.delete-sponsor-mapping=DELETE FROM ems_event.sponsor_mapping where event_id = $1
+org.com.ems.queries.event.delete-sponsor-singular-mapping=DELETE FROM ems_event.sponsor_mapping where event_id = $1 AND sponsor_id = $2
+org.com.ems.queries.event.get-attendees=SELECT am.* \
+  FROM ems_event.attendee_mapping am \
+  JOIN ems_attendee.attendees e ON am.attendee_id = e.id \
+  WHERE am.event_id = $1;
+org.com.ems.queries.event.get-sponsors=SELECT sm.* \
+  FROM ems_event.sponsor_mapping sm \
+  JOIN ems_sponsor.sponsors e ON sm.sponsor_id = e.id \
+  WHERE sm.event_id = $1;
 # ems_event.event_streams
 org.com.ems.queries.event.add-event-stream=INSERT INTO ems_event.event_stream(uuid, created_at, last_updated, stream_type, inception_time, message_type, content, language, is_important, metadata) values ($1,$2,$3,$4,$5,$6,$7,$8,$9,$10)
 # BASED ON an eventId retrieve the records
