--- a/organizer-service/src/main/resources/properties/queries.properties
+++ b/organizer-service/src/main/resources/properties/queries.properties
@@ -2,7 +2,7 @@
 # You could also change the queries to this: DELETE FROM attendees WHERE id = :id -> and you would call .bind("id", uuid))
 # ems_organizer.ems_organizer.organizers
 org.com.ems.queries.organizer.save=INSERT INTO ems_organizer.organizers (id, created_at, last_updated, name, website, information, event_types, email, phone_number, physical_address) values($1,$2,$3,$4,$5,$6,$7,$8,$9,$10)
-org.com.ems.queries.organizer.edit=UPDATE ems_organizer.organizers SET id = $1, last_updated = $2, name = $3, website = $4, information = $5, event_types = $6, email = $7, phone_number = $8, physical_address = $9  WHERE id = $10
+org.com.ems.queries.organizer.edit=UPDATE ems_organizer.organizers SET last_updated = $1, name = $2, website = $3, information = $4, event_types = $5, email = $6, phone_number = $7, physical_address = $8  WHERE id = $9
 org.com.ems.queries.organizer.get-all=SELECT * FROM ems_organizer.organizers
 org.com.ems.queries.organizer.get-id=SELECT * FROM ems_organizer.organizers WHERE id = $1
 org.com.ems.queries.organizer.delete-id=DELETE FROM ems_organizer.organizers WHERE id = $1
