--- a/attendee-service/src/main/resources/application.properties
+++ b/attendee-service/src/main/resources/application.properties
@@ -13,6 +13,7 @@ io.github.evaggelos99.ems.attendee.ticket-service-url=http://localhost:8080/tick
 # Kafka
 spring.kafka.producer.bootstrap-servers=localhost:9092
 io.github.evaggelos99.ems.event.topic.add-attendee=ems.event.add-attendee
+io.github.evaggelos99.ems.event.topic.remove-attendee=ems.event.remove-attendee
 spring.kafka.producer.retries=3
 
 # Security
