--- a/infra/docker-kafka/docker-compose.yml
+++ b/infra/docker-kafka/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       KAFKA_LOG_DIRS: '/tmp/kraft-combined-logs'
-      KAFKA_CREATE_TOPICS: "ems.event.add-attendee:1:1,"
+      KAFKA_CREATE_TOPICS: "ems.event.add-attendee:1:1,ems.event.remove-attendee:1:1"
     ports:
       - "9092:9092"
     networks:
