--- a/ticket-service/src/main/resources/properties/db.properties
+++ b/ticket-service/src/main/resources/properties/db.properties
@@ -1,7 +1,7 @@
 # SQL credentials
 # full url: r2dbc:postgresql://localhost:5433/event-management-system
-io.github.evaggelos99.ems.ticket-service.db.username=user
-io.github.evaggelos99.ems.ticket-service.db.password=pass
+io.github.evaggelos99.ems.ticket-service.db.username=event-management-system-user
+io.github.evaggelos99.ems.ticket-service.db.password=event-management-system-user
 io.github.evaggelos99.ems.ticket-service.db.port=5432
 io.github.evaggelos99.ems.ticket-service.db.database=event-management-system
 io.github.evaggelos99.ems.ticket-service.db.host=localhost
