--- a/ticket-service/src/main/resources/properties/queries.properties
+++ b/ticket-service/src/main/resources/properties/queries.properties
@@ -2,7 +2,7 @@
 # You could also change the queries to this: DELETE FROM attendees WHERE id = :id -> and you would call .bind("id", uuid))
 # ems_ticket.ems_ticket.tickets
 org.com.ems.queries.ticket.save=INSERT INTO ems_ticket.tickets (id, created_at, last_updated, event_id, ticket_type, price, transferable, seat, section, used) values($1,$2,$3,$4,$5,$6,$7,$8,$9,$10)
-org.com.ems.queries.ticket.edit=UPDATE ems_ticket.tickets SET id = $1, last_updated = $2, event_id = $3, ticket_type = $4, price = $5, transferable = $6, seat = $7, section = $8, used = $9  WHERE id = $10
+org.com.ems.queries.ticket.edit=UPDATE ems_ticket.tickets SET last_updated = $2, event_id = $3, ticket_type = $4, price = $5, transferable = $6, seat = $7, section = $8, used = $9  WHERE id = $10
 org.com.ems.queries.ticket.get-all=SELECT * FROM ems_ticket.tickets
 org.com.ems.queries.ticket.get-id=SELECT * FROM ems_ticket.tickets WHERE id = $1
 org.com.ems.queries.ticket.delete-id=DELETE FROM ems_ticket.tickets WHERE id = $1
