[technical/send-email-when-purchasing-ticket] - Make some controller method no content instead of boolean - Send email when purchasing ticket - Remove temp password for IDP onboarding and send email instead

--- a/attendee-service/src/main/resources/application.properties
+++ b/attendee-service/src/main/resources/application.properties
@@ -9,6 +9,7 @@ server.port=8081
 
 # Service discovery:
 io.github.evaggelos99.ems.attendee.ticket-service-url=http://localhost:8080/ticket
+io.github.evaggelos99.ems.attendee.user-service-url=http://localhost:8086/user
 
 # Kafka
 spring.kafka.producer.bootstrap-servers=localhost:9092
