--- a/attendee-service/src/test/resources/application.properties
+++ b/attendee-service/src/test/resources/application.properties
@@ -2,5 +2,6 @@ io.github.evaggelos99.ems.event.topic.add-attendee=ems.event.add-attendee
 io.github.evaggelos99.ems.event.topic.remove-attendee=ems.event.remove-attendee
 spring.kafka.producer.retries=1
 io.github.evaggelos99.ems.attendee.ticket-service-url=localhost:28080
+io.github.evaggelos99.ems.attendee.user-service-url=localhost:38080
 spring.main.web-application-type=reactive
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=dummy
