--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -13,5 +13,5 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:9011/.wel
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9011
 
 # FusionAuth client
-io.github.evaggelos99.ems.user.service.fusionauth.api-key=EZvWzkIrI14IgSU4b04zpsElCmMqvl2zoo02F8Mndn-g7CKN5UgIR-OB
+io.github.evaggelos99.ems.user.service.fusionauth.api-key=local-secret
 io.github.evaggelos99.ems.user.service.fusionauth.application-name=event-management-system
