--- a/user-service/src/main/resources/properties/queries.properties
+++ b/user-service/src/main/resources/properties/queries.properties
@@ -7,3 +7,12 @@ io.github.evaggelos99.ems.user-service.db.get-all=SELECT * FROM ems_admin.users
 io.github.evaggelos99.ems.user-service.db.get-id=SELECT * FROM ems_admin.users WHERE id = $1
 io.github.evaggelos99.ems.user-service.db.delete-id=DELETE FROM ems_admin.users WHERE id = $1
 io.github.evaggelos99.ems.user-service.db.attendees-came-to-all-events=SELECT COUNT(id) FROM ems_event.event WHERE attendees_ids @> ARRAY[$1]
+io.github.evaggelos99.ems.user-service.db.add-sponsor-entity-uuid=INSERT INTO ems_admin.user_id_map_to_sponsor (entity_id, user_id) VALUES ($1, $2);
+io.github.evaggelos99.ems.user-service.db.add-attendee-entity-uuid=INSERT INTO ems_admin.user_id_map_to_attendee (entity_id, user_id) VALUES ($1, $2);
+io.github.evaggelos99.ems.user-service.db.add-organizer-entity-uuid=INSERT INTO ems_admin.user_id_map_to_organizer (entity_id, user_id) VALUES ($1, $2);
+io.github.evaggelos99.ems.user-service.db.entity-uuid=\
+    SELECT * FROM ems_admin.users WHERE id = (SELECT user_id FROM ems_admin.user_id_map_to_sponsor WHERE entity_id = $1 \
+    UNION \
+    SELECT user_id FROM ems_admin.user_id_map_to_attendee WHERE entity_id = $1 \
+    UNION \
+    SELECT user_id FROM ems_admin.user_id_map_to_organizer WHERE entity_id = $1);
