--- a/attendee-api/pom.xml
+++ b/attendee-api/pom.xml
@@ -39,6 +39,10 @@
             <groupId>io.github.evaggelos99</groupId>
             <artifactId>ticket-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.github.evaggelos99</groupId>
+            <artifactId>user-api</artifactId>
+        </dependency>
     </dependencies>
 
 
