--- a/attendee-service/pom.xml
+++ b/attendee-service/pom.xml
@@ -92,6 +92,10 @@
             <groupId>io.github.evaggelos99</groupId>
             <artifactId>security-lib</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.simplejavamail</groupId>
+            <artifactId>simple-java-mail</artifactId>
+        </dependency>
 
         <!-- test dependencies -->
         <dependency>
