--- a/attendee-service/src/main/resources/properties/queries.properties
+++ b/attendee-service/src/main/resources/properties/queries.properties
@@ -20,4 +20,5 @@ org.com.ems.queries.attendee.get-tickets=SELECT t.* \
   FROM ems_attendee.ticket_mapping tm \
   JOIN ems_ticket.tickets t ON tm.ticket_id = t.id \
   WHERE tm.attendee_id = $1;
-
+org.com.ems.queries.attendee.save-email=INSERT INTO ems_attendee.email (from_email, to_email, cc, body, from_name, to_name, subject) values($1,$2,$3,$4,$5,$6,$7);
+org.com.ems.queries.attendee.get-emails=SELECT * FROM ems_attendee.email WHERE to_email = $1;
