--- a/infra/docker-fusionauth/docker-compose.yml
+++ b/infra/docker-fusionauth/docker-compose.yml
@@ -1,3 +1,4 @@
+# admin@admin.com
 # admin
 # adminadmin
 services:
@@ -14,6 +15,7 @@ services:
       FUSIONAUTH_APP_MEMORY: "512M"
       FUSIONAUTH_APP_RUNTIME_MODE: "development"
       FUSIONAUTH_APP_URL: http://fusionauth:9011
+      FUSIONAUTH_LOG_LEVEL: "debug,trace"
     healthcheck:
       test: curl --silent --fail http://localhost:9011/api/status -o /dev/null -w "%{http_code}"
       interval: 5s
@@ -23,7 +25,7 @@ services:
       - db_net
     restart: unless-stopped
     ports:
-      - 9011:9011
+      - "9011:9011"
     volumes:
       - fusionauth_config:/usr/local/fusionauth/config
 
@@ -31,8 +33,8 @@ services:
     hostname: smtp-server
     image: reachfive/fake-smtp-server
     ports:
-      - 1025:1025
-      - 1080:1080
+      - "1025:1025"
+      - "1080:1080"
     networks:
       - db_net
 
